fixed spacing commit

--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,11 @@
     font-size: 60px;
     color: white; 
 }
+.label{
+    width:20px;
+    overflow: hidden;
+  }
+
+  .createSpace{
+      height:400px;
+  }
